--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -84,6 +84,7 @@ body {
   background-color: var(--color-7);
   flex: 1;
   width: 100%;
+  overflow-y: scroll;
 }
 
 .messages-list > *:not(:last-child) {
