--- a/src/assets/css/BaseButton.css
+++ b/src/assets/css/BaseButton.css
@@ -1,8 +1,8 @@
 .base-button {
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 14px;
+  line-height: 17px;
+  padding: 8px 10px;
   font-weight: 500;
-  padding: 18px 30px;
   cursor: pointer;
   color: var(--color-7);
   border-radius: 6px;
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   box-shadow: 6px 6px 25px rgba(42, 139, 242, 0.15),
     4px 4px 25px rgba(42, 139, 242, 0.05), 10px 6px 25px rgba(42, 139, 242, 0.15);
   background: rgb(124,184,247);
@@ -17,4 +18,13 @@
   background: -webkit-linear-gradient(120deg, rgba(124,184,247,1) 0%, rgba(42,139,242,1) 100%);
   background: linear-gradient(120deg, rgba(124,184,247,1) 0%, rgba(42,139,242,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#7cb8f7",endColorstr="#2a8bf2",GradientType=1);
+}
+
+@media (min-width: 768px) {
+  .base-button {
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 500;
+    padding: 18px 30px;
+  }
 }
